# grand-harbour-rm-agent

./: .env.example  .gitignore  ARCHITECTURE.md  ATTESTATION.md  Procfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
docs/: AGENT_WORKFLOWS.md  HOSTING_PLAN.md
etl/: LOAD_PROOF.json  SCRAPE_MANIFEST.json
memory/: AGENTS.md
scripts/: compute_load_fingerprint.py  run_etl.py
skills/: CHALLENGE_SKILL.md
skills/asof-snapshot-guardrail/: SKILL.md
skills/block-concentration-review/: SKILL.md
skills/grain-and-date-guardrails/: SKILL.md
skills/macro-shift-segmentation/: SKILL.md
skills/ota-dependency-check/: SKILL.md
skills/otb-summary-triage/: SKILL.md
skills/pickup-pace-diagnosis/: SKILL.md
sql/: VIEWS.sql
src/otel_rm/: __init__.py  api.py  config.py  db.py
src/otel_rm/agent/: __init__.py  factory.py  health.py  workflows.py
src/otel_rm/etl/: __init__.py  load.py  models.py  scraper.py
src/otel_rm/tools/: __init__.py  required.py
src/otel_rm/web/: index.html
tests/: conftest.py  test_agent.py  test_agent_workflows.py  test_api.py  test_etl.py  test_skills.py  test_tools.py
tests/fixtures/: composite_trace.json
tools/: METRIC_DEFINITIONS.md
web/: index.html
