[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otel-rm-agent"
version = "0.1.0"
description = "Hackathon revenue manager agent with ETL, semantic tools, and Deep Agents harness."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "deepagents>=0.6.10,<0.7",
  "fastapi>=0.116,<1",
  "langchain-openai>=1.3,<2",
  "playwright>=1.55,<2",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "python-dotenv>=1.1,<2",
  "python-frontmatter>=1.1,<2",
  "sse-starlette>=2.3,<3",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
